--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="Gary O'Donnell" content="Official Music Website" />
+  <meta name="Gary O'Donnell" content="Official Music Website for Gary O'Donnell & the Dime Store Heroes" />
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
